Fix: dark mode collapsed table secondary text and edit link colors
Bug: T165415

--- a/src/transform/ThemeTransform.css
+++ b/src/transform/ThemeTransform.css
@@ -13,12 +13,12 @@
   background: #fff;
 }
 
-.pagelib-theme-dark body {
+.pagelib-theme-dark body, .pagelib-theme-dark .fixture_body {
   color: #f8f9fa;
   background: #2e3136;
 }
 
-.pagelib-theme-sepia body {
+.pagelib-theme-sepia body, .pagelib-theme-sepia .fixture_body {
   color: #222;
   background: #f8f1e3;
 }
